--- a/Web/Pages/User/App_LocalResources/UpdateUserProfile.aspx.es.resx
+++ b/Web/Pages/User/App_LocalResources/UpdateUserProfile.aspx.es.resx
@@ -150,4 +150,7 @@
   <data name="revEmail.ErrorMessage" xml:space="preserve">
     <value>Sintaxis de email incorrecta</value>
   </data>
+  <data name="lnkListCreditCards.Text" xml:space="preserve">
+    <value>Tarjetas de Crédito del usuario</value>
+  </data>
 </root>
