--- a/Web/Pages/User/App_LocalResources/RegisterCreditCard.aspx.resx
+++ b/Web/Pages/User/App_LocalResources/RegisterCreditCard.aspx.resx
@@ -118,27 +118,39 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="btnRegisterCreditCard.Text" xml:space="preserve">
-    <value>Rexistrar</value>
+    <value>Register</value>
   </data>
   <data name="lclCheckDefault.Text" xml:space="preserve">
-    <value>Tarxeta Predeterminada</value>
+    <value>Default Credit Card</value>
   </data>
   <data name="lclCreditNumber.Text" xml:space="preserve">
-    <value>Número da Tarxeta de Crédito</value>
+    <value>Credit Card Number</value>
   </data>
   <data name="lclCreditType.Text" xml:space="preserve">
-    <value>Tipo da Tarxeta de Crédito</value>
+    <value>Credit Card Type</value>
   </data>
   <data name="lclExpirationDate.Text" xml:space="preserve">
-    <value>Data de expiración da Tarxeta de Crédito (dd/MM/AAAA)</value>
+    <value>Credit Card Expiration Date (dd/MM/YYYY)</value>
   </data>
   <data name="lclVerificationCode.Text" xml:space="preserve">
-    <value>Código de verificación da Tarxeta de Crédito</value>
+    <value>Credit Card Verification Code</value>
   </data>
   <data name="Page.Title" xml:space="preserve">
-    <value>Practica MaD - Rexistro da Tarxeta de Crédito do Usuario</value>
+    <value>Practica MaD - Update User Credit Card</value>
   </data>
   <data name="lblNumberError.Text" xml:space="preserve">
-    <value>Tarxeta de Crédito xa existente</value>
+    <value>Credit Card already exists</value>
+  </data>
+  <data name="revEmail.ErrorMessage" xml:space="preserve">
+    <value>Incorrect email syntax</value>
+  </data>
+  <data name="revExpirationDate.ErrorMessage" xml:space="preserve">
+    <value>Incorrect date syntax</value>
+  </data>
+  <data name="revNumberError.ErrorMessage" xml:space="preserve">
+    <value>Only numbers allow</value>
+  </data>
+  <data name="lclMenuExplanation.Text" xml:space="preserve">
+    <value>Credit Card registration</value>
   </data>
 </root>
