--- a/Web/Pages/User/App_LocalResources/ListCreditCards.aspx.resx
+++ b/Web/Pages/User/App_LocalResources/ListCreditCards.aspx.resx
@@ -144,4 +144,7 @@
   <data name="lclMenuExplanation.Text" xml:space="preserve">
     <value>Credit Cards Information</value>
   </data>
+  <data name="lnkMain" xml:space="preserve">
+    <value>Main</value>
+  </data>
 </root>
