--- a/Web/Pages/Shopping/App_LocalResources/ListDeliveries.aspx.resx
+++ b/Web/Pages/Shopping/App_LocalResources/ListDeliveries.aspx.resx
@@ -117,55 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="btnRegister.Text" xml:space="preserve">
-    <value>Register</value>
-  </data>
-  <data name="cvPasswordCheck.Text" xml:space="preserve">
-    <value>Passwords do not match</value>
-  </data>
-  <data name="lblLoginError.Text" xml:space="preserve">
-    <value>User already exists</value>
-  </data>
-  <data name="lclCountry.Text" xml:space="preserve">
-    <value>Country</value>
-  </data>
-  <data name="lclEmail.Text" xml:space="preserve">
-    <value>Email</value>
-  </data>
-  <data name="lclFirstName.Text" xml:space="preserve">
-    <value>First name</value>
-  </data>
-  <data name="lclLanguage.Text" xml:space="preserve">
-    <value>Language</value>
-  </data>
-  <data name="lclMenuExplanation.Text" xml:space="preserve">
-    <value>User registration</value>
-  </data>
-  <data name="lclPassword.Text" xml:space="preserve">
-    <value>Password</value>
-  </data>
-  <data name="lclRetypePassword.Text" xml:space="preserve">
-    <value>Retype password</value>
-  </data>
-  <data name="lclAddress.Text" xml:space="preserve">
+  <data name="address" xml:space="preserve">
     <value>Address</value>
   </data>
-  <data name="lclSurname.Text" xml:space="preserve">
-    <value>Surname</value>
+  <data name="card" xml:space="preserve">
+    <value>Credit Card</value>
   </data>
-  <data name="lnkUserExists.Text" xml:space="preserve">
-    <value>Check if user exists</value>
+  <data name="date" xml:space="preserve">
+    <value>Date</value>
   </data>
-  <data name="Page.Title" xml:space="preserve">
-    <value>PracticaMaD - User Registration</value>
+  <data name="description" xml:space="preserve">
+    <value>Description</value>
   </data>
-  <data name="lclUserName.Text" xml:space="preserve">
-    <value>User name</value>
+  <data name="identifier" xml:space="preserve">
+    <value>Delivery</value>
   </data>
-  <data name="revEmail.ErrorMessage" xml:space="preserve">
-    <value>Incorrect email syntax</value>
-  </data>
-  <data name="lclCreditCard.Text" xml:space="preserve">
-    <value>Register Credit Card</value>
+  <data name="price" xml:space="preserve">
+    <value>Price</value>
   </data>
 </root>
