--- a/Web/App_LocalResources/PracticaMaD.Master.resx
+++ b/Web/App_LocalResources/PracticaMaD.Master.resx
@@ -132,6 +132,9 @@
   <data name="lnkAuthenticate.Text" xml:space="preserve">
     <value>Authentication</value>
   </data>
+  <data name="lnkListDeliveries.Text" xml:space="preserve">
+    <value>My deliveries</value>
+  </data>
   <data name="lnkLogout.Text" xml:space="preserve">
     <value>Logout</value>
   </data>
