--- a/Web/Pages/User/App_LocalResources/Register.aspx.gl.resx
+++ b/Web/Pages/User/App_LocalResources/Register.aspx.gl.resx
@@ -168,4 +168,7 @@
   <data name="lclCreditCard.Text" xml:space="preserve">
     <value>Rexistrar Tarxeta de Crédito</value>
   </data>
+  <data name="default" xml:space="preserve">
+    <value>Predeterminada</value>
+  </data>
 </root>
