Añadida vista de detalles de producto básica

--- a/Web/App_GlobalResources/Common.gl.resx
+++ b/Web/App_GlobalResources/Common.gl.resx
@@ -117,8 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="categoryName" xml:space="preserve">
+    <value>Categoría</value>
+  </data>
   <data name="mandatoryField" xml:space="preserve">
     <value>Campo obrigatorio</value>
+  </data>
+  <data name="Next" xml:space="preserve">
+    <value>Seguinte</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Anterior</value>
+  </data>
+  <data name="productDate" xml:space="preserve">
+    <value>Data de publicación</value>
+  </data>
+  <data name="productId" xml:space="preserve">
+    <value>Identificador do produto</value>
+  </data>
+  <data name="productName" xml:space="preserve">
+    <value>Nome</value>
+  </data>
+  <data name="productPrice" xml:space="preserve">
+    <value>Prezo por unidade</value>
+  </data>
+  <data name="productQuantity" xml:space="preserve">
+    <value>Cantidade</value>
   </data>
   <data name="searchButton" xml:space="preserve">
     <value>Procurar</value>
